[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agent", "config", "exception", "logger", "prompt_library", "tools", "utils"]

[project]
name = "agentic-travel-orchestrator"
authors = [
    {name = "Bava Sukruth Reddy", email = "sukruthreddy29@gmail.com"}
    ]
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.128.0",
    "httpx>=0.28.1",
    "langchain>=1.2.3",
    "langchain-community>=0.4.1",
    "langchain-experimental>=0.4.1",
    "langchain-google-community[places]>=3.0.4",
    "langchain-groq>=1.1.1",
    "langchain-openai>=1.1.7",
    "langchain-tavily>=0.2.16",
    "langgraph>=1.0.5",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "streamlit>=1.52.2",
    "uvicorn>=0.40.0",
]
